# 0xflow

./: .gitignore  CHRYSALIS.md  CODEBASE.md  LICENSE  README.md  package-lock.json  package.json  vite.config.js
docs/: project-tasks-tags.md
src/: App.svelte  canvas.js  database.js  editor.js  folder-browser.css  folder-browser.js  images.js  index.html  main.js  project-hub.js  splash.html  storage.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/legacy/: canvas-stub.js  canvas.js  folder-browser.js  images.js  storage.js  tauri-mock.js
src/lib/: AINotePanel.svelte  AudioPlayer.svelte  BookmarkPanel.svelte  BrainstormPanel.svelte  Canvas.svelte  CanvasBar.svelte  CanvasImportPicker.svelte  ClearConfirm.svelte  CommandPalette.svelte  Dashboard.svelte  DashboardChangelog.svelte  DashboardUpdatePanel.svelte  DrawCard.svelte  ExportPanel.svelte  FlowRow.svelte  FlowsView.svelte  FolderBrowser.svelte  ImageCard.svelte  ImportPalette.svelte  ImportPanel.svelte  MediaDropHandler.svelte  MediaOverlay.svelte  Minimap.svelte  NoteCard.svelte  NoteEditor.svelte  NoteOverlay.svelte  ProjectGrid.svelte  SearchBox.svelte  SelectionBar.svelte  ShapeOptionsBar.svelte  Sidebar.svelte  StatusBar.svelte  TaskRow.svelte  TasksView.svelte  TimerPanel.svelte  Toast.svelte  TodoCard.svelte  TodoOverlay.svelte  Toolbar.svelte  TopBar.svelte  (+10 more)
src/lib/flow-rows/: ChecklistRow.svelte  (+5 more)
src/stores/: canvas.js  editor.js  elements.js  projects.js  secondary-canvas.js  ui.js
